Fix width\height scrollbar padding

--- a/src/sticky-table.css
+++ b/src/sticky-table.css
@@ -2,7 +2,6 @@
   position: relative;
   height: 100%;
   overflow: hidden;
-  padding-bottom: 15px;
 }
 .sticky-table .sticky-table-corner {
   position: absolute;
@@ -40,9 +39,6 @@
 .sticky-table .sticky-table-y-wrapper {
   height: 100%;
   overflow-y: auto;
-  /* Hack to hide scrollbars */
-  padding-right: 17px;
-  margin-right: -17px;
 }
 /*
 Hack to make table paint on it's own layer.
@@ -73,7 +69,6 @@ Scrolling is probably 10-20x smoother.
   left: 0px;
   bottom: 0px;
   height: 20px;
-  width: calc(100%);
 }
 .sticky-table #y-scrollbar {
   right: 0px;
